--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pyzstd" %}
-{% set version = "0.15.0" %}
+{% set version = "0.15.10" %}
 
 package:
   name: {{ name|lower }}
@@ -7,11 +7,11 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: bf15a39cb3c9b662775e22ffa8c4da09fdde6a15ece5e0ed710b6d3b4329cf36
+  sha256: 83603a97fdbcf2139f475c940789f09e32703f931f29f4a8ddf3551e6700108b
 
 build:
   number: 0
-  script: {{ PYTHON }} -m pip install --install-option="--dynamic-link-zstd" -vv .
+  script: {{ PYTHON }} -m pip install --no-deps --no-build-isolation --config-settings="--build-option=--dynamic-link-zstd" -vv .
 
 requirements:
   build:
@@ -19,6 +19,7 @@ requirements:
   host:
     - python
     - setuptools
+    - wheel
     - pip
     - zstd
   run:
@@ -27,12 +28,18 @@ requirements:
 test:
   source_files:
     - tests/
+  requires:
+    - pip
+  imports:
+    - pyzstd
   commands:
     - python -m unittest -v
+    - pip check
 
 about:
-  home: https://github.com/animalize/pyzstd
-  doc_url: https://pyzstd.readthedocs.io/en/latest/
+  home: https://github.com/Rogdham/pyzstd
+  doc_url: https://pyzstd.readthedocs.io
+  dev_url: https://github.com/Rogdham/pyzstd
   license: BSD-3-Clause
   license_family: BSD
   license_file: LICENSE
